# dl_py2f-example

./: .gitignore  CMakeLists.txt  README.md  __init__.py  callback.py  clean.cmake  compile.sh  compile_from_source.sh  do_something_externally.f90  example.py  install_with_apt.sh  install_with_pip.sh  user_script.py
.github/workflows/: cmake-single-platform.yml  gnu-arm.yml  gnu-i8.yml  gnu-macos-i8.yml  gnu-macos.yml  gnu.yml  intel-i8.yml  intel.yml  llvm-i8.yml  llvm.yml  nvidia-i8.yml  nvidia.yml  test_dwarf.py
example/: .gitignore  CMakeLists.txt  __init__.py  callback.py  do_something_externally.f90  example.f90  example.py  example_dirs.py.in
example/your_code/: data_module.f90  your_code.f90  your_module.f90
your_code/: your_code.f90  your_module.f90
